--- a/code.html
+++ b/code.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Vusumuzi Ngcobo</title>
+    <title>Inversed: A Coding Project By Vusumuzi Ngcobo</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -21,7 +21,7 @@
     <!-- ==Nav Section== -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
        <div class="container-fluid">
-           <a class="navbar-brand" href="#"><img src="#" class="d-inline-block align-text-top" width="30" height="24">APP NAME</a>
+           <a class="navbar-brand" href="#"><img src="#" class="d-inline-block align-text-top" width="30" height="24">Inversed</a>
            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
@@ -50,14 +50,53 @@
     <!-- ==Main Section== -->
     <main class="flex-shrink-0">
         <div class="container py-5 px-5 mt-5">
-            <h2 class="border-1 border-bottom border-dark">The Code for APP NAME</h2>
+            <h2 class="border-1 border-bottom border-dark">The Code for Inversed</h2>
             <div class="row row-cols-1 rol-cols-lg-2">
                 <div class="col-lg-8">
                     <pre class="line-numbers">
                         <code class="language-javascript">
-                            function helloWorld(){
-                                alert("hello World");
-                            }
+                            //Get the string from the page
+//controller function
+
+function getValue(){
+   document.getElementById("alert").classList.add("invisible");
+
+   let userString = document.getElementById("userString").value;
+
+   let revString = reverseString(userString);
+
+   displayString(revString);
+}
+
+
+//Reverse the string 
+//Logic function
+function reverseString(userString){
+    let revString = [];
+
+    //let name=Bobby
+    //name[0] = "B";
+    //name[4] = "y";
+    //last pos in an array = name.length-1
+
+    //reverse a string using a for loop
+    for (let index = userString.length - 1; index >= 0; index--) {
+        revString += userString[index];
+    }
+
+    return revString;
+}
+
+//Display message with the reversed string to the user
+//View Function
+function displayString(revString){
+    
+    //write to the page
+    document.getElementById("msg").innerHTML = `Your string reversed is: ${revString}`;
+    //show the alert box
+    document.getElementById("alert").classList.remove("invisible");
+
+}
                         </code>
                     </pre>
                 </div>
