--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Vusumuzi Ngcobo</title>
+    <title>Inversed: A Coding Project By Vusumuzi Ngcobo</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,7 +20,7 @@
 <!-- ==Nav Section== -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="/img/android-chrome-512x512.png" class="img-fluid d-inline-block align-text-top" width="30" height="24">APP NAME</a>
+        <a class="navbar-brand" href="#"><img src="/img/android-chrome-512x512.png" class="img-fluid d-inline-block align-text-top" width="30" height="24">  Inversed</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -51,7 +51,7 @@
        <div class="container col-xxl-8 px-4 py-5">
            <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                <div class="col order-last order-lg-first">
-                   <h1 class="display-5 fw-bold lh-1 mb-3">APP NAME: A Coding Project</h1>
+                   <h1 class="display-5 fw-bold lh-1 mb-3">Inversed: A Coding Project</h1>
                    <h4 class="lead">Live life one loop at a time. A Javascript coding exercise to write a program that displays the numbers from 0 to 100. Displays the even numbers in <strong>BOLD.</strong>
                    </h4>
                    <ul class="fa-ul pt-2 checklist">
@@ -77,8 +77,9 @@
                        </div>
                    </h5>
                </div>
+               <!--Logo goes here-->
                <div class="col">
-                   <img src="/img/Logo/10 sq.svg" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500">
+                   <img src="/img/Logo/Inversed.svg" class="img-fluid center-block d-block mx-auto" alt="Inversed Logo" width="700" height="500">
                </div>
            </div>
        </div>
