Summary of the code

--- a/code.html
+++ b/code.html
@@ -101,9 +101,15 @@ function displayString(revString){
                     </pre>
                 </div>
                 <div class="col-lg-4">
-                    <p>The Code Is Structured In One Function</p>
-                    <h5>Hello World</h5>
-                    <p>Hello World is a function that displays an alert with a message of "Hello World"</p>
+                    <p>The Code Is Structured In Three Separate Functions</p>
+                    <h5>getValue</h5>
+                    <p>getValue is a function that serves as the controller function, which gets the user input from the page.</p>
+                    <h5>reverseString</h5>
+                    <p>reverseString serves as the logic function. Its job is to reverse the user's string input - which is achieved by using a For Loop. In this For Loop, we have to set it up so that it starts from the last index in the array to the first. 
+                        After the loop is finished, we then ask the program to return those values.
+                    </p>
+                    <h5>displayString</h5>
+                    <p>displayString serves as the display function. It has to display the values from revString to user.</p>
                 </div>
             </div>
         </div>
