Updated links to GIT Repo

--- a/code.html
+++ b/code.html
@@ -38,7 +38,7 @@
                        <a class="nav-link active" aria-current="page" href="code.html">The Code</a>
                    </li>
                    <li class="nav-item">
-                       <a class="nav-link" target="_blank" href="#">Git Repo</a>
+                       <a class="nav-link" target="_blank" href="https://github.com/VNgcobo/Inversed">Git Repo</a>
                    </li>
                    <li class="nav-item">
                        <a class="nav-link" target="_blank" href="#">About</a>
@@ -56,47 +56,47 @@
                     <pre class="line-numbers">
                         <code class="language-javascript">
                             //Get the string from the page
-//controller function
+                            //controller function
 
-function getValue(){
-   document.getElementById("alert").classList.add("invisible");
+                            function getValue(){
+                                document.getElementById("alert").classList.add("invisible");
 
-   let userString = document.getElementById("userString").value;
+                                let userString = document.getElementById("userString").value;
 
-   let revString = reverseString(userString);
+                                let revString = reverseString(userString);
 
-   displayString(revString);
-}
+                                displayString(revString);
+                            }
 
 
-//Reverse the string 
-//Logic function
-function reverseString(userString){
-    let revString = [];
+                            //Reverse the string 
+                            //Logic function
+                            function reverseString(userString){
+                                let revString = [];
 
-    //let name=Bobby
-    //name[0] = "B";
-    //name[4] = "y";
-    //last pos in an array = name.length-1
+                                //let name=Bobby
+                                //name[0] = "B";
+                                //name[4] = "y";
+                                //last pos in an array = name.length-1
 
-    //reverse a string using a for loop
-    for (let index = userString.length - 1; index >= 0; index--) {
-        revString += userString[index];
-    }
+                                //reverse a string using a for loop
+                                for (let index = userString.length - 1; index >= 0; index--) {
+                                    revString += userString[index];
+                                }
 
-    return revString;
-}
+                                return revString;
+                            }
 
-//Display message with the reversed string to the user
-//View Function
-function displayString(revString){
+                            //Display message with the reversed string to the user
+                            //View Function
+                            function displayString(revString){
     
-    //write to the page
-    document.getElementById("msg").innerHTML = `Your string reversed is: ${revString}`;
-    //show the alert box
-    document.getElementById("alert").classList.remove("invisible");
+                                //write to the page
+                                document.getElementById("msg").innerHTML = `Your string reversed is: ${revString}`;
+                                //show the alert box
+                                document.getElementById("alert").classList.remove("invisible");
 
-}
+                            }
                         </code>
                     </pre>
                 </div>
