--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- ==Nav Section== -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="/img/android-chrome-512x512.png" class="img-fluid d-inline-block align-text-top" width="30" height="24">  Inversed</a>
+        <a class="navbar-brand" href="#"><img src="/img/Logo/white_logo___no_background_3Aa_icon.ico" class="img-fluid d-inline-block align-text-top" width="30" height="36">  Inversed</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -79,7 +79,7 @@
                </div>
                <!--Logo goes here-->
                <div class="col">
-                   <img src="/img/Logo/Inversed.svg" class="img-fluid center-block d-block mx-auto" alt="Inversed Logo" width="700" height="500">
+                   <img src="/img/Inversed-logos.jpeg" class="img-fluid center-block d-block mx-auto" alt="Inversed Logo" width="700" height="500">
                </div>
            </div>
        </div>
@@ -92,7 +92,7 @@
                     <div><span class="text-muted">&copy;2021</span> Vusumuzi Ngcobo | vngcobo407@gmail.com</div>
                 </div>
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-center">
-                    <img src="/img/Logo/logo.svg" alt="VN Logo" height="30">
+                    <img src="/img/Logo/Color logo - no background.svg" alt="VN Logo" height="60">
                 </div>
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
                     <div class="row">
@@ -111,6 +111,10 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
+    </script>
+    <script src="/js/site.js"></script>
+    <script>
+        document.getElementById("btnSubmit").addEventListener("click",getValue);
     </script>
 </body>
 
